--- a/.git-ci/gitlab-iem.yml
+++ b/.git-ci/gitlab-iem.yml
@@ -1,9 +1,15 @@
+# All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
+image: registry.gitlab.com/pages/hugo:latest
+
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+
 pages:
-  image: alpine
   script:
-  - echo "create pages..."
+  - hugo
   artifacts:
     paths:
     - public
   only:
-  - master
+  - main
+
